<resources>
    <string name="app_name">Service Novigrad</string>
    <string name="SignUp">Sign Up</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="whitelogo">WhiteLogo</string>
    <string name="userName">User Name</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="newUsersQ">New Users?</string>
    <string name="dayslabel">Select Your Working Days:</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="sun">Sun</string>
    <string name="branchcaption">Select Branch:</string>
    <string name="residence_proof">Proof of residence (An image of a bank statement or hydro bill that shows the address)</string>
    <string name="status_proof">Proof of status (An image of a Canadian permanent resident card or a Canadian passport)</string>
    <string name="photo">Your Photo</string>
    <string name="apptdate"><![CDATA[Select Appointment Date & Time]]></string>
</resources>